# rad

./: pyproject.toml  rad.py  setup.py
radfirst/: cli.py  git_wrapper.py
tests/: test_cli_e2e.py  test_git_wrapper.py
